--- a/src/Dpiit2.css
+++ b/src/Dpiit2.css
@@ -9,7 +9,7 @@
   justify-content: space-between;
   align-items: left;
   text-align: center;
-  background-color: #f45151;
+  background-color:  #770597;
   padding: 25px;
   color: rgb(18, 16, 16);
   border-radius: 10px;
@@ -31,7 +31,7 @@
 }
 
 .N009get-recognised-btn {
-  background-color:#d01313;
+  background-color:#a9993a;
   color: rgb(28, 25, 25);
   text-align: left;
   background-position: left;
@@ -70,22 +70,22 @@
 
 .criteria-header {
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-top: 80px;
 }
 
 .N009criteria-header h3 {
   font-size: 16px;
-  margin: 20;
   font-weight: bold;
 }
 
 .N009circle-logo {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 10%;
-  margin-left: 20px;
+  margin-left: 180px;
+  margin-right:60px;
 }
 
 .N009criteria-item p {
@@ -278,21 +278,21 @@ body {
 
 .N009container {
   display: flex;
-  height: 10vh;
+  height: 20vh;
 }
 
 /* Sidebar Styling */
 .N009sidebar {
   width: 150px;
-  background-color: #5a84c8;
+  background-color: #0e0f12;
   padding: 35px;
   border-right: 1px solid #e0e0e0;
   transition: background-color 0.3s ease;
 }
 
 .N009sidebar h2 {
-  margin-bottom: 20px;
-  font-size: 14px;
+  margin-bottom: 40px;
+  font-size: 18px;
   color: #131212;
 }
 
@@ -304,12 +304,12 @@ body {
   padding: 5px;
   cursor: pointer;
   color: #171717;
-  border-radius: 10px;
+  border-radius: 2px;
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .N009sidebar ul li:hover {
-  background-color: #bcb77c;
+  background-color: #c6672c;
   transform: translateX(10px); /* Moves the list item slightly to the right */
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
 }
@@ -321,17 +321,17 @@ body {
 
 .N009sidebar {
   width: 200px; /* Sidebar width */
-  background-color: #a17948; /* Dark sidebar */
+  background-color: #f7f4ef; /* Dark sidebar */
   color: rgb(13, 12, 12); /* White text */
   padding: 20px,5px;
   transition: transform 0.3s ease; /* Smooth transition for collapsing */
 }
 
 .N009toggle-sidebar {
-  margin: 5px;
+  margin:3px;
   padding: 20px 5px;
-  background-color: #545d65; /* Button color */
-  color: white; /* Button text color */
+  background-color: #79a0c1; /* Button color */
+  color: bold rgb(14, 13, 13); /* Button text color */
   border: none;
   border-radius: px; /* Rounded corners */
   cursor: pointer; /* Pointer on hover */
@@ -354,7 +354,7 @@ body {
 .N009content {
   flex: 1; /* Takes up remaining space */
   padding: 10px;
-  background-color: rgb(56, 50, 50); /* Dark content background */
+  background-color: rgb(255, 255, 255); /* Dark content background */
   backdrop-filter: blur(5px); /* Adds blur for better readability over the background image */
 }
 
@@ -417,7 +417,7 @@ body {
 
 /* Button with Hover Animation */
 .N009get-recognised-btn {
-  background-color: #ee2d06;
+  background-color: #e0581d;
   color: white;
   padding: 10px 20px;
   border: none;
