--- a/src/InformationTechnology.css
+++ b/src/InformationTechnology.css
@@ -63,33 +63,25 @@
   /* Apply the animation to the container */
   .parag6 {
     animation: easeInOutAnimation 2s ease-in-out infinite;
-  }
-  .parag6 {
-    background-color: #bd2727;
-    padding-left: 80px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    height: 10%;
-    justify-content: center;
-    width: 100;
-    height: 20px;
-    text-align: center;
-    font-weight: bold;
-  }
   
-  .parag6{
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 35px;
+    
     width: 500px;
+    height: fit-content;
+    margin-top: 20px;
+    margin-left: 40px;
     
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     
-    height:fit-content;
-    margin-top: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size:150%;
-    margin-left:30px;
-    border-radius: 15px;
+    font-size: 150%;
+    font-weight: bold;
     
-    color: #add020;
-    box-shadow: 2px 2px rgba(18, 2, 2, 0.996);
+    border-radius: 15px;
   }
   
   
