--- a/src/RegulationsTable.css
+++ b/src/RegulationsTable.css
@@ -28,6 +28,7 @@ p {
 .y002-regulations-table {
   border-collapse: collapse;
   margin-bottom: 20px;
+  margin-left: 10px;
 }
 
 /* Table header styling */
