--- a/src/customer.css
+++ b/src/customer.css
@@ -63,30 +63,25 @@
   /* Apply the animation to the container */
   .parag2 {
     animation: easeInOutAnimation 2s ease-in-out infinite;
-  }
-  .parag2 {
-    background-color: #bd2727;
-padding: 20px;
-    padding-left: 60px;
-    height: 10%;
-    justify-content: center;
-    width: 120;
-    height: 20px;
-    text-align: center;
-    font-weight: bold;
-  }
   
-  .parag2{
-    width: 600px;
-    height:fit-content;
-    margin-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 35px;
+    
+    width: 500px;
+    height: fit-content;
+    margin-top: 20px;
+    margin-left: 40px;
+    
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size:150%;
-    margin-left:30px;
+    font-size: 150%;
+    font-weight: bold;
+    
     border-radius: 15px;
-    background-color: rgb(192, 30, 30);
-    color: #ffffff;
-    box-shadow: 2px 2px rgba(128, 128, 128, 0.63);
   }
   
   
