--- a/src/healthcare.css
+++ b/src/healthcare.css
@@ -63,31 +63,25 @@
   /* Apply the animation to the container */
   .parag5 {
     animation: easeInOutAnimation 2s ease-in-out infinite;
-  }
-  .parag5 {
-    background-color: #bd2727;
-    padding-left: 170px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    height: 10%;
-    justify-content: center;
-    width: 100;
-    height: 20px;
-    text-align: center;
-    font-weight: bold;
-  }
   
-  .parag5{
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 35px;
+    
     width: 500px;
-    height:fit-content;
-    margin-top: 10px;
+    height: fit-content;
+    margin-top: 20px;
+    margin-left: 40px;
+    
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size:150%;
-    margin-left:30px;
+    font-size: 150%;
+    font-weight: bold;
+    
     border-radius: 15px;
-    background-color: rgb(255, 5, 205);
-    color: #efefef;
-    box-shadow: 2px 2px rgba(249, 151, 151, 0.996);
   }
   
   
